--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,16 +10,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidGame">
         <activity
-            android:name=".CalculationsModeGamesMenu"
+            android:name=".mainmenu.gamemodesmenu.calculationsmodegamesmenu.CalculationsModeGamesMenu"
             android:exported="false" />
         <activity
-            android:name=".GameModesMenu"
+            android:name=".mainmenu.gamemodesmenu.GameModesMenu"
             android:exported="false" />
         <activity
-            android:name=".CalculateExpressionLevel"
+            android:name=".mainmenu.gamemodesmenu.calculationsmodegamesmenu.calculateexpressionlevel.CalculateExpressionLevel"
             android:exported="false" />
         <activity
-            android:name=".MainMenu"
+            android:name=".mainmenu.MainMenu"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
