--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AndroidGame" >
+        android:theme="@style/Theme.AndroidGame"
+        >
         <activity
             android:name="com.sumsung.minigames.mainmenu.games.GameActivity"
             android:exported="false" />
